--- a/sourse/pug/blocks/sWorkTogether/_sWorkTogether.pug
+++ b/sourse/pug/blocks/sWorkTogether/_sWorkTogether.pug
@@ -11,7 +11,8 @@ mixin sWorkTogether(data)
 							<source type="image/webp" srcset="img/@2x/webp/workTogether-bg.webp" media="(min-width:576px)">
 							<source type="image/webp" srcset="img/@1x/webp/workTogether-bg.webp">
 							<source type="image/jpg" srcset="img/@2x/avif/workTogether-bg.jpg" media="(min-width:576px)">
-							<source type="image/jpg" srcset="img/@1x/avif/workTogether-bg.jpg"><img src="img/@2x/workTogether-bg.jpg" alt="">
+							<source type="image/jpg" srcset="img/@1x/avif/workTogether-bg.jpg">
+							<img src="img/@2x/workTogether-bg.jpg" alt="">
 						</picture>
 						+e.wrap
 							h2 Работаем вместе
