--- a/sourse/pug/pages/027-vacancy-page-2.pug
+++ b/sourse/pug/pages/027-vacancy-page-2.pug
@@ -14,6 +14,7 @@ extends layout/main.pug
 include ../blocks/sForm/_sForm.pug
 include ../blocks/sWorkTogether/_sWorkTogether.pug
 include ../blocks/sVacancyResult/_sVacancyResult.pug
+include ../blocks/sGuarantee/_sGuarantee.pug
 
 block variables
 	- let  mainPage= null 
