--- a/sourse/pug/pages/029-how-to-order.pug
+++ b/sourse/pug/pages/029-how-to-order.pug
@@ -14,6 +14,7 @@ extends layout/main.pug
 //- include ../blocks/sServiceCenterHead/_sServiceCenterHead.pug
 //- include ../blocks/sServicesList/_sServicesList.pug
 //- include ../blocks/sTermsOfSale/_sTermsOfSale.pug
+include ../blocks/sGuarantee/_sGuarantee.pug
 include ../blocks/sHowToOrderHead/_sHowToOrderHead.pug
 include ../blocks/sStepsToOrder/_sStepsToOrder.pug
 
