--- a/sourse/pug/blocks/sGuarantee/_sGuarantee.pug
+++ b/sourse/pug/blocks/sGuarantee/_sGuarantee.pug
@@ -18,7 +18,8 @@ mixin sGuarantee(data)
 						li Срок обмена товара на&nbsp;другой аналогичный&nbsp;&mdash; 7&nbsp;дней, при необходимости дополнительной проверки качества&nbsp;&mdash; 20&nbsp;дней (срок продлевается до&nbsp;30&nbsp;дней в&nbsp;случае отсутствия товара на&nbsp;складе).
 				+b.info-message
 					+e.img-wrap
-						img(src="img/svg/icon-question.svg", alt="")
+						+icon('icon-question')
+						//- img(src="img/svg/icon-question.svg", alt="")
 					+e.content
 						h3 Если у&nbsp;вас остались вопросы:
 						.row
