--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -47,6 +47,10 @@
 	font-size:math.div(8,10)*1rem;
 	width: math.div(6,8)*1em;
 }
+.icon-chevron-right-lg {
+	font-size:math.div(36,10)*1rem;
+	width: math.div(36,36)*1em;
+}
 .icon-chevron-top {
 	font-size:math.div(9,10)*1rem;
 	width: math.div(15,9)*1em;
@@ -88,6 +92,14 @@
 	width: math.div(24,24)*1em;
 }
 .icon-growth {
+	font-size:math.div(36,10)*1rem;
+	width: math.div(36,36)*1em;
+}
+.icon-icon-news {
+	font-size:math.div(36,10)*1rem;
+	width: math.div(36,36)*1em;
+}
+.icon-icon-question {
 	font-size:math.div(36,10)*1rem;
 	width: math.div(36,36)*1em;
 }
