--- a/sourse/pug/blocks/sAllCertificates/_sAllCertificates.pug
+++ b/sourse/pug/blocks/sAllCertificates/_sAllCertificates.pug
@@ -1,19 +1,25 @@
 mixin sAllCertificates(data)
 	// start sAllCertificates
 	+b.SECTION.sAllCertificates.section#sAllCertificates&attributes(attributes)
-		+e.black
+		+e.line 
+			+pic('sCertLine.jpg','bg')
 		.container
 			+b.section-title
-			.row
-				mixin certificateEl(i,t)
-					.col-6.col
-						+b.certificateEl
-							+e.w
-								+pic(`certificateEl-${i}.jpg`,'')
-								+e.t 
-									p= t
-				+certificateEl(`1`,'Сертификат официального дилера Kuppersbusch')
-				+certificateEl(`2`,'Сертификат официального дилера Brandt')
-				+certificateEl(`3`,'Сертификат официального дилера Kuppersbusch')
-				+certificateEl(`4`,'Сертификат официального дилера Brandt')
+				.row
+					mixin certificateEl(i,t)
+						+e.col.col-lg-6
+							+b.certificateEl
+								+e.w
+									+pic(`certificateEl-${i}.jpg`,'')
+									+e.t 
+										p= t
+					+certificateEl(`1`,'Сертификат официального дилера Kuppersbusch')
+					+certificateEl(`2`,'Сертификат официального дилера Brandt')
+					+certificateEl(`3`,'Сертификат официального дилера Kuppersbusch')
+					+certificateEl(`4`,'Сертификат официального дилера Brandt')
+				.row 
+					.col 
+						+e.btn
+							+b.catalog-btn(type="button")
+								p показать еще
 	// end sAllCertificates
