--- a/sourse/pug/blocks/sCertGuarantees/_sCertGuarantees.pug
+++ b/sourse/pug/blocks/sCertGuarantees/_sCertGuarantees.pug
@@ -6,7 +6,7 @@ mixin sCertGuarantees(data)
 				h2 Сертификаты дают гарантию того, что:
 			.row
 				mixin certGuarteesI(i,p)
-					.col-4 
+					.col-lg-4 
 						+b.certGuarteesI
 							+e.i
 								img(src=`img/svg/certGuarImage-${i}.svg`, alt="")
