--- a/sourse/pug/blocks/sCertificatesHead/_sCertificatesHead.pug
+++ b/sourse/pug/blocks/sCertificatesHead/_sCertificatesHead.pug
@@ -1,10 +1,11 @@
 mixin sCertificatesHead(data)
 	// start sCertificatesHead
 	+b.SECTION.sCertificatesHead.section#sCertificatesHead&attributes(attributes)
-		+pic('sCertificates-head-1.jpg', 'bg').picture-bg
+		+pic('sCertificates-head-1.jpg', 'bg').picture-bg.offer-under
+		+pic('sCertificates-head.jpg', 'bg').picture-bg.offer-i
 		.container
 			.row 
-				.col-6 
+				.col-lg-6 
 					+e.offer
 						h1 Гарантия качества
 						p 
