--- a/sourse/pug/blocks/sCertGuarantees/_sCertGuarantees.scss
+++ b/sourse/pug/blocks/sCertGuarantees/_sCertGuarantees.scss
@@ -25,3 +25,15 @@
 		margin-bottom: 30px;
 	}
 }
+
+@include media-breakpoint-down(lg) {
+	.certGuarteesI{
+		margin-left: auto;
+		margin-right: auto;
+		text-align: center;
+		&__i{
+			margin-left: auto;
+			margin-right: auto;
+		}
+	}
+}
