sNewsCards section done

--- a/sourse/pug/blocks/sNewsCards/_sNewsCards.pug
+++ b/sourse/pug/blocks/sNewsCards/_sNewsCards.pug
@@ -23,21 +23,22 @@ mixin sNewsCards(data)
 						+e.item(href="#") Ноябрь
 						+e.item(href="#") Декабрь
 			+e.items
-				mixin sNewsCardsItem()
+				mixin sNewsCardsItem(h, p)
 					+e.item(href="#")
 						.row
-							.col-md-4
+							.col-lg-5.col-xxl-4
 								+pic(`sNewsCards-1.png`, 'bg', 0)
-							.col-md-8
+							.col-lg-7.col-xxl-8
 								+e.DIV.content
-									h2 Новые сушильные шкафы от&nbsp;Asko
+									h2!= h
 									+e.date 21.12.2021
-									p Новый сушильный шкаф Asko станет функциональным и&nbsp;стильным дополнением вашего дома&nbsp;&mdash; вы&nbsp;будете удивляться, как вы&nbsp;справлялись без него! <br> Новый сушильный шкаф Asko станет функциональным и&nbsp;стильным дополнением вашего дома&nbsp;&mdash; вы&nbsp;будете удивляться, как вы&nbsp;справлялись без него...
+									p!= p
 									+e.btn
 										span подробнее
 										+icon('chevron-right-lg')
-				- for (var x = 0; x < 3; x++)
-					+sNewsCardsItem()
+				+sNewsCardsItem(`Новые сушильные шкафы от&nbsp;Asko`, `Новый сушильный шкаф Asko станет функциональным и&nbsp;стильным дополнением вашего дома&nbsp;&mdash; вы&nbsp;будете удивляться, как вы&nbsp;справлялись без него! <br> Новый сушильный шкаф Asko станет функциональным и&nbsp;стильным дополнением вашего дома&nbsp;&mdash; вы&nbsp;будете удивляться, как вы&nbsp;справлялись без него...`)
+				+sNewsCardsItem(`Новые сушильные шкафы от&nbsp;Asko`, `Новый сушильный шкаф Asko станет функциональным и&nbsp;стильным дополнением вашего дома&nbsp;&mdash; вы&nbsp;будете удивляться, как вы&nbsp;справлялись без него! <br> Новый сушильный шкаф Asko станет функциональным и&nbsp;стильным дополнением вашего дома&nbsp;&mdash; вы&nbsp;будете удивляться, как вы&nbsp;справлялись без него...`)
+				+sNewsCardsItem(`Новые сушильные шкафы от&nbsp;Asko`, `Новый сушильный шкаф Asko станет функциональным и&nbsp;стильным дополнением вашего дома&nbsp;&mdash; вы&nbsp;будете удивляться, как вы&nbsp;справлялись без него!`)
 
 
 	// end sNewsCards
