--- a/sourse/pug/blocks/sNewsCards/_sNewsCards.scss
+++ b/sourse/pug/blocks/sNewsCards/_sNewsCards.scss
@@ -127,11 +127,13 @@
 		background-color: $white;
 		margin-top: rem(50);
 		text-decoration: none;
-		.row {
-			--bs-gutter-x: 0;
-		}
+		background-color: #eeeeee;
+		// .row {
+		// 	--bs-gutter-x: 0;
+		// }
 		picture {
 			@include block(433, 260);
+			height: 100%;
 			img {
 				position: absolute;
 				left: 0;
@@ -140,8 +142,10 @@
 		}
 		&:hover {
 			.sNewsCards__btn {
-				padding: rem(16) rem(20) rem(16) rem(30);
-				left: 0;
+				@include media-breakpoint-up(lg) {
+					padding: rem(16) rem(20) rem(16) rem(30);
+					left: 0;
+				}
 			}
 		}
 	}
@@ -149,26 +153,55 @@
 	&__content {
 		position: relative;
 		overflow: hidden;
-		padding: rem(30) rem(50);
+		height: 100%;
+		padding: rem(25) rem(25) rem(70);
+		@include media-breakpoint-up(sm) {
+			padding: rem(25) rem(30) rem(70);
+		}
+		@include media-breakpoint-up(md) {
+			padding: rem(30) rem(40) rem(70);
+		}
+		@include media-breakpoint-up(lg) {
+			padding: rem(30) rem(50);
+			margin-left: calc(-1 * var(--bs-gutter-x));
+		}
+		@include media-breakpoint-up(xxl) {
+			padding: rem(35) rem(70);
+		}
 		h2 {
 			line-height: 146%;
 			margin-bottom: rem(5);
 		}
 		p {
 			margin-bottom: 0;
-			margin-top: rem(20);
+			margin-top: 1em;
+			font-size: rem(18);
+			line-height: calc(25 / 20);
+			color: #3d3d3d;
+			max-width: rem(771);
+			@include media-breakpoint-up(sm) {
+				font-size: rem(20);
+			}
 		}
 	}
 	&__btn {
 		@include mt;
 		position: absolute;
-		left: -140px;
 		bottom: 0;
+		right: 0;
 		display: inline-flex;
 		align-items: center;
+		justify-content: flex-end;
 		background-color: $primary;
 		color: $white;
-		padding: rem(16) 2px;
+		padding: rem(16) rem(20) rem(16) rem(30);
+
+		@include media-breakpoint-up(lg) {
+			right: auto;
+			left: rem(-117);
+			padding: rem(16) 2px;
+			justify-content: flex-start;
+		}
 		span {
 			display: inline-block;
 			text-transform: uppercase;
@@ -183,6 +216,11 @@
 			stroke: currentColor;
 			stroke-width: 3px;
 		}
+	}
+	&__date {
+		font-size: rem(14);
+		line-height: calc(22 / 14);
+		color: #858585;
 	}
 
 	@include media-breakpoint-up(xl) {
