--- a/sourse/pug/pages/030-news.pug
+++ b/sourse/pug/pages/030-news.pug
@@ -37,9 +37,9 @@ block pagecontent
 			h2!= title
 	+sNewsHeader()
 	+sNewsCards()
-	+sFormReturn({
-		title: 'Заявка',
-		descr: 'Заполните заявку на возврат товара',
+	+sFormNews({
+		title: 'Подпишись на наши новости!',
+		descr: 'Заполни форму и ты всегда будешь в курсе самых последних новостей и новинок нашего салона!',
 	})
 	//- +sGuarantee()
 	//- +sTermsOfSale()
