--- a/sourse/pug/blocks/sNewsCards/_sNewsCards.scss
+++ b/sourse/pug/blocks/sNewsCards/_sNewsCards.scss
@@ -169,8 +169,9 @@
 			padding: rem(35) rem(70);
 		}
 		h2 {
-			line-height: 146%;
+			line-height: 145%;
 			margin-bottom: rem(5);
+			font-weight: 600;
 		}
 		p {
 			margin-bottom: 0;
@@ -181,6 +182,9 @@
 			max-width: rem(771);
 			@include media-breakpoint-up(sm) {
 				font-size: rem(20);
+			}
+			@include media-breakpoint-only(lg) {
+				font-size: rem(18);
 			}
 		}
 	}
