--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -46,7 +46,7 @@ mixin footer()
             li: a(href='#') Сантехника для кухни
           +e.creator-logo(href="#")
             +e.cr-img
-              img(laoding="lazy" src='img/svg/creator-logo.svg' alt="")
+              img(loading="lazy" src='img/svg/creator-logo.svg' alt="")
             +e.cr-txt Разработка сайта
       +e.bot
         +e.all-right © 2020 Китченмания — официальный интернет-магазин бытовой техники. Все права защищены.
