--- a/sourse/pug/blocks/sForm/_sForm.pug
+++ b/sourse/pug/blocks/sForm/_sForm.pug
@@ -96,7 +96,7 @@ mixin sFormNews(data)
 		.container
 			+e.box.bg-wrap
 				+pic('dark-bg.png', 'bg', 0).picture-bg
-				+e.IMG.image(loading="lazy" src="img/svg/sFormNews.svg" alt="")
+				img.sForm__image(loading="lazy" src="img/svg/sFormNews.svg" alt="")
 				.row
 					.col-lg-7.col-xl
 						+b.section-title
