--- a/sourse/pug/blocks/sNewsCards/_sNewsCards.pug
+++ b/sourse/pug/blocks/sNewsCards/_sNewsCards.pug
@@ -36,7 +36,10 @@ mixin sNewsCards(data)
 									+e.btn
 										span подробнее
 										+icon('chevron-right-lg')
-				+sNewsCardsItem(`Новые сушильные шкафы от&nbsp;Asko`, `Новый сушильный шкаф Asko станет функциональным и&nbsp;стильным дополнением вашего дома&nbsp;&mdash; вы&nbsp;будете удивляться, как вы&nbsp;справлялись без него! <br> Новый сушильный шкаф Asko станет функциональным и&nbsp;стильным дополнением вашего дома&nbsp;&mdash; вы&nbsp;будете удивляться, как вы&nbsp;справлялись без него...`)
+									+e.BUTTON.btn-like&attributes(attributes)
+										+icon('btnLike')
+
+				+sNewsCardsItem(`Новые сушильные шкафы от&nbsp;Asko`, `Новый сушильный шкаф Asko станет функциональным и&nbsp;стильным дополнением вашего дома&nbsp;&mdash; вы&nbsp;будете удивляться, как вы&nbsp;справлялись без него! <br> Новый сушильный шкаф Asko станет функциональным и&nbsp;стильным дополнением вашего дома&nbsp;&mdash; вы&nbsp;будете удивляться, как вы&nbsp;справлялись без него...`).active
 				+sNewsCardsItem(`Новые сушильные шкафы от&nbsp;Asko`, `Новый сушильный шкаф Asko станет функциональным и&nbsp;стильным дополнением вашего дома&nbsp;&mdash; вы&nbsp;будете удивляться, как вы&nbsp;справлялись без него! <br> Новый сушильный шкаф Asko станет функциональным и&nbsp;стильным дополнением вашего дома&nbsp;&mdash; вы&nbsp;будете удивляться, как вы&nbsp;справлялись без него...`)
 				+sNewsCardsItem(`Новые сушильные шкафы от&nbsp;Asko`, `Новый сушильный шкаф Asko станет функциональным и&nbsp;стильным дополнением вашего дома&nbsp;&mdash; вы&nbsp;будете удивляться, как вы&nbsp;справлялись без него!`)
 
