--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -23,6 +23,10 @@
 	font-size:math.div(10,10)*1rem;
 	width: math.div(14,10)*1em;
 }
+.icon-btnLike {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
 .icon-call {
 	font-size:math.div(48,10)*1rem;
 	width: math.div(48,48)*1em;
