--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -27,6 +27,10 @@
 	font-size:math.div(48,10)*1rem;
 	width: math.div(48,48)*1em;
 }
+.icon-chart {
+	font-size:math.div(48,10)*1rem;
+	width: math.div(48,48)*1em;
+}
 .icon-check {
 	font-size:math.div(17,10)*1rem;
 	width: math.div(17,17)*1em;
@@ -87,6 +91,10 @@
 	font-size:math.div(32,10)*1rem;
 	width: math.div(32,32)*1em;
 }
+.icon-email {
+	font-size:math.div(48,10)*1rem;
+	width: math.div(48,48)*1em;
+}
 .icon-fb {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
@@ -102,6 +110,10 @@
 .icon-icon-question {
 	font-size:math.div(36,10)*1rem;
 	width: math.div(36,36)*1em;
+}
+.icon-income-call {
+	font-size:math.div(48,10)*1rem;
+	width: math.div(48,48)*1em;
 }
 .icon-info {
 	font-size:math.div(48,10)*1rem;
@@ -155,11 +167,19 @@
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
 }
+.icon-telegram {
+	font-size:math.div(48,10)*1rem;
+	width: math.div(48,48)*1em;
+}
 .icon-tool {
 	font-size:math.div(48,10)*1rem;
 	width: math.div(48,48)*1em;
 }
 .icon-tool-2 {
+	font-size:math.div(48,10)*1rem;
+	width: math.div(48,48)*1em;
+}
+.icon-whatsapp {
 	font-size:math.div(48,10)*1rem;
 	width: math.div(48,48)*1em;
 }
