--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -49,6 +49,11 @@
 			color: $primary;
 		}
 	}
+	&__btn-wrap {
+		display: flex;
+    flex-direction: column;
+    max-width: 210px;
+	}
 	&__callback-btn{
 		@extend .btn;
 		@extend .btn-primary;
@@ -58,6 +63,20 @@
 		text-transform: uppercase;
 		padding: 5px 10px;
 		font-size: rem(14);
+	}
+	&__registartion-btn {
+		@extend .btn;
+		@include mt;
+		text-transform: uppercase;
+		font-size: rem(14);
+		padding: 5px rem(20);
+		border: 1px solid #9B9B9B;
+		color: $white;
+		margin-bottom: rem(17);
+		&:hover {
+			border-color: #FF8651;
+			color: $white;
+		}
 	}
 	&__mail{
 		@include mt();
