--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -103,7 +103,7 @@
 	&__item{
 		width: rem(40);
 		height: rem(40);
-		border-radius: 50%;
+		// border-radius: 50%;
 		padding: rem(4);
 		background-color: $primary;
 
