--- a/sourse/pug/blocks/sEquipmentSstorageBody/_sEquipmentSstorageBody.pug
+++ b/sourse/pug/blocks/sEquipmentSstorageBody/_sEquipmentSstorageBody.pug
@@ -14,5 +14,5 @@ mixin sEquipmentSstorageBody(data)
 							span дней!
 					+e.P.subtext *Полные условия акции уточняйте у&nbsp;наших менеджеров.
 				.col.col-xl-4
-					+pic('equipmentSstorageBody-bg.png', 'bg', 0)
+					+pic('equipment-bg.png', 'bg', 0)
 	// end sEquipmentSstorageBody
