--- a/sourse/pug/blocks/sServicesList/_sServicesList.pug
+++ b/sourse/pug/blocks/sServicesList/_sServicesList.pug
@@ -29,7 +29,7 @@ mixin sServicesList(data)
 							+e.content
 								+icon('phone')
 								h5 Телефон &laquo;горячей линии&raquo; AEG
-								+e.number(href="tel:+88004444448") 8 (800) 444-444-8
+								+e.number(href="tel:88004444448") 8 (800) 444-444-8
 				.col-12.col-xl-6
 					+e.card
 						+pic('servicesCard-bg-2.png', '', 0)
@@ -41,7 +41,7 @@ mixin sServicesList(data)
 							+e.content
 								+icon('phone')
 								h5 Телефон &laquo;горячей линии&raquo; Asko
-								+e.number(href="tel:+88007070807") 8 (800) 707-08-07
+								+e.number(href="tel:88007070807") 8 (800) 707-08-07
 				.col-12.col-xl-6
 					+e.card
 						+pic('servicesCard-bg-3.png', '', 0)
@@ -69,5 +69,5 @@ mixin sServicesList(data)
 								+icon('phone')
 								h5 Телефон &laquo;горячей линии&raquo; Dometic
 								+e.number-wrap
-									+e.number(href="tel:+84957807939") 8 (495) 780-79-39
+									+e.number(href="tel:84957807939") 8 (495) 780-79-39
 	// end sServicesList
