--- a/sourse/pug/blocks/sParkingMap/_sParkingMap.scss
+++ b/sourse/pug/blocks/sParkingMap/_sParkingMap.scss
@@ -3,8 +3,19 @@
 		--sPT: 0;
 		--sPB: 0;
 		// --sTPB: ;
-	.ymaps-map {
-		height: rem(751) !important;
+	&__map {
+		position: relative;
+		// height: rem(751);
+		min-height: rem(400);
+		max-height: rem(751);
+		@include block(1920, 751);
+		& > * {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100% !important;
+			height: 100% !important;
+		}
 	}
 	.ymaps-layers-pane {
 		filter: grayscale(1);
