--- a/sourse/pug/blocks/sWhatWeDo/_sWhatWeDo.scss
+++ b/sourse/pug/blocks/sWhatWeDo/_sWhatWeDo.scss
@@ -12,9 +12,12 @@
 	&__text {
 		background-color: $white;
 		padding: rem(30) rem(23) rem(30) rem(30);
-		max-width: rem(264);
 		margin-left: auto;
 		margin-right: auto;
+		margin-bottom: 0;
+		@include media-breakpoint-up(lg) {
+			max-width: rem(264);
+		}
 		span {
 			color: $orange;
 		}
@@ -70,7 +73,7 @@
 	&__icon {
 		position: absolute;
 		top: rem(192);
-		right: 0;
+		right: 5px;
 		background-color: $white;
 		width: rem(100);
 		height: rem(100);
