--- a/mail/src/assets/scss/_settings.scss
+++ b/mail/src/assets/scss/_settings.scss
@@ -22,7 +22,7 @@ $success-color: #3adb76;
 $warning-color: #ffae00;
 $alert-color: #ec5840;
 $light-gray: #f3f3f3;
-$medium-gray: #cacaca;
+$medium-gray: #9C9C9C;
 $dark-gray: #8a8a8a;
 $black: #131313;
 $white: #fefefe;
@@ -63,12 +63,12 @@ $global-font-size: 16px;
 $body-line-height: $global-line-height;
 $header-font-family: $body-font-family;
 $header-font-weight: $global-font-weight;
-$h1-font-size: 34px;
+$h1-font-size: 36px;
 $h2-font-size: 30px;
 $h3-font-size: 28px;
 $h4-font-size: 24px;
 $h5-font-size: 20px;
-$h6-font-size: 18px;
+$h6-font-size: 19px;
 $header-margin-bottom: 10px;
 $paragraph-margin-bottom: 10px;
 $small-font-size: 80%;
