--- a/mail/src/assets/scss/template/_template.scss
+++ b/mail/src/assets/scss/template/_template.scss
@@ -71,5 +71,97 @@ table.button.google table td {
   font-size: 19px;
 }
 .categories{
-  
+  display: flex;
+  margin-top: 30px;
+  padding-bottom: 5px;
+    &__link{
+      display: flex;
+      align-items: center;
+      color: #858585;
+      font-size: 12px;
+      align-items: center;
+      padding: 5px 10px;
+      background: #191919;
+      height: 52px;
+      flex-grow: 1;
+      flex-shrink: 0;
+      &:not(:last-child){
+        border-right: 1px solid #858585;
+
+      }
+      img{
+        margin-right: 9px;
+        flex: 0 0 auto;
+      }
+    }
+}
+
+.mail-body{
+  background-image: url(https://megafronteam.github.io/0068Kitchen/public/img/@2x/sAbout-bg.png);
+  background-repeat: no-repeat;
+  background-size: 100% 200px;
+  min-height: 200px;
+
+  &__head{
+    padding-top: 30px;
+    padding-bottom: 30px;
+    color: #fff;
+    .container{
+      background-color: transparent;
+    }
+    h1{
+      color: #fff;
+      font-weight: bold;
+    }
+  }
+  &__body{
+    .container{
+      padding: 25px 35px;
+      background-color: #fff;
+    }
+  }
+
+}
+
+
+div.container{
+  margin-left: auto;
+  margin-right: auto;
+  max-width: $global-width;
+  box-sizing: border-box;
+  p{
+    margin-bottom: 1rem;
+  }
+}
+
+.table-block{
+  border: 1px solid #E2E2E2;
+  margin-bottom: 50px;
+  &__head{
+    background-color: #F6F6F6;
+    padding: 15px 30px;
+    box-sizing: border-box;
+  }
+  &__body--info{
+    padding: 30px 50px;
+  }
+}
+
+.block-info{
+  &__head{
+    max-width: 404px;
+    display: flex;
+    border-bottom: 1px solid #E2E2E2;
+    padding-bottom: 25px;
+  }
+}
+.block-info__head-item{
+  flex-grow: 1;
+  text-align: left;
+}
+.block-info__head-title{
+  color: #9C9C9C;
+  font-size: 14px;
+  margin-bottom: 10px;
+  text-transform: uppercase;
 }
