--- a/mail/src/assets/scss/template/_template.scss
+++ b/mail/src/assets/scss/template/_template.scss
@@ -329,4 +329,10 @@ hr{
   height: 40px;
   display: inline-block;
   background: #FF8651;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 40px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
 }
