--- a/mail/src/assets/scss/template/_template.scss
+++ b/mail/src/assets/scss/template/_template.scss
@@ -20,6 +20,7 @@ html,
 .header {
   background: #262626;
   font-size: 19px;
+  padding-top: 30px;
 }
 
 .header .columns {
@@ -77,7 +78,7 @@ table.button.google table td {
     &__link{
       display: flex;
       align-items: center;
-      color: #858585;
+      color: #858585 !important;
       font-size: 12px;
       align-items: center;
       padding: 5px 10px;
@@ -89,12 +90,12 @@ table.button.google table td {
         border-right: 1px solid #858585;
 
       }
-      img{
-        margin-right: 9px;
-        flex: 0 0 auto;
-      }
     }
-}
+  }
+  .img{
+    margin-right: 9px;
+    flex: 0 0 auto;
+  }
 
 .mail-body{
   background-image: url(https://megafronteam.github.io/0068Kitchen/public/img/@2x/sAbout-bg.png);
@@ -176,8 +177,8 @@ div.container{
     // margin-left: 40px;
   }
   &__body{
-    display: flex;
-    flex-wrap: wrap;
+    // display: flex;
+    // flex-wrap: wrap;
     padding-top: 50px;
     .block-info__item{
       max-width: 50%;
@@ -190,6 +191,9 @@ div.container{
       }
     }
   }
+}
+.row{
+  display: flex;
 }
 .block-info__item{
   flex-grow: 1;
@@ -339,4 +343,8 @@ hr{
   justify-content: center;
   align-items: center;
   margin-left: 5px;
+}
+
+li{
+  margin-left: 0 !important;
 }
