--- a/mail/src/assets/scss/template/_template.scss
+++ b/mail/src/assets/scss/template/_template.scss
@@ -181,7 +181,7 @@ div.container{
     // flex-wrap: wrap;
     padding-top: 50px;
     .block-info__item{
-      max-width: 50%;
+      width: 50%;
       padding-left: 47px;
       margin-bottom: 25px;
       img{
@@ -196,7 +196,8 @@ div.container{
   display: flex;
 }
 .block-info__item{
-  flex-grow: 1;
+  // flex-grow: 1;
+  width: 50%;
   text-align: left;
   position: relative;
 }
@@ -298,6 +299,10 @@ h5.strong{
   color: #fff;
   padding-top: 40px;
   padding-bottom: 40px;
+  .container{
+    padding-left: 30px;
+    padding-right: 30px;
+  }
   h4{
     a{
       color: #fff !important;
